fix: css: address, look info overflow

--- a/src/less/catalog/catalog.less
+++ b/src/less/catalog/catalog.less
@@ -43,6 +43,13 @@
   }
 }
 
+.catalog__address-wrap {
+  @media screen and (min-width: @tablet) {
+    max-height: 70vh;
+    overflow: auto;
+  }
+}
+
 .catalog__address-list {
   .ul-reset();
 
